cabal-version:       3.0
name:                polydraw
version:             0.1.1
license:             BSD3
license-file:        LICENSE
author:              D. Sunshine
maintainer:          david@sunshines.org
category:            Graphics
build-type:          Simple
extra-source-files:  README.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:    Graphics.Polydraw
    other-extensions:   UnicodeSyntax
    import:             warnings
--    main-is:            Main.hs
    build-depends:      base, containers, filepath, colour, hsnoise
    hs-source-dirs:     src
    other-modules:      Graphics.OpenSCAD, Tree, Land
    default-extensions: FlexibleContexts
    default-language:   Haskell2010

source-repository head
  type:           git
  location:       https://github.com/dsunshi/polydraw
