cabal-version:       3.0
name:                polydraw
version:             0.1.1
license:             BSD-4-Clause
license-file:        LICENSE
author:              D. Sunshine
maintainer:          david@sunshines.org
category:            Graphics
build-type:          Simple
extra-source-files:  README.md

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    Graphics.Polydraw, Graphics.Polydraw.Unicode
    default-extensions: FlexibleContexts
    other-extensions:   UnicodeSyntax
    build-depends:      base, containers, filepath, colour, hsnoise
    default-language:   Haskell2010

Test-Suite Units
  type:        exitcode-stdio-1.0
  main-is:     UnitTest.hs
  build-depends: base,
                 colour,
                 filepath,
                 HUnit,
                 Cabal,
                 tasty-hunit,
                 tasty,
                 deepseq,
                 --testpack,
                 HTF,
                 semigroups,
                 containers
  Build-tool-depends:  HTF:htfpp
  default-language:    Haskell2010

source-repository head
  type:           git
  location:       https://github.com/dsunshi/polydraw
